--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
+    <meta charset="UTF-8" />
     <meta http-equiv="refresh" content="0; URL=bienvenida.html" />
+    <title>Redireccionando...</title>
   </head>
   <body>
-    Redirigiendo...
+    <p>Redireccionando a tu asistente Ellie...</p>
   </body>
 </html>
